<resources>
    <string name="app_name">casiooo</string>
    <string name="ac">AC</string>
    <string name="key9">9</string>
    <string name="key8">8</string>
    <string name="key7">7</string>
    <string name="key6">6</string>
    <string name="key5">5</string>
    <string name="key4">4</string>
    <string name="key3">3</string>
    <string name="key2">2</string>
    <string name="key1">1</string>
    <string name="key0">0</string>
    <string name="keyX">x</string>
    <string name="key_close">)</string>
    <string name="key_delete">DEL</string>
    <string name="btn_div">/</string>
    <string name="button_open">(</string>
    <string name="todo">TODO</string>
</resources>